--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "astro": "^5.0.0",
     "@astrojs/tailwind": "^6.0.0",
+    "@astrojs/vercel": "^8.0.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
